更新像素置换模块 注:暂时无法解决因QQ等软件压缩后的颜色丢失问题